# rust-gilded-rose

./: Cargo.toml  rustfmt.toml
proptest-regressions/gilded_rose/unit_tests/: aged_brie.txt  conjured_mana_cake.txt  standard_item.txt
src/: gilded_rose.rs  main.rs
src/gilded_rose/: unit_tests.rs
src/gilded_rose/unit_tests/: aged_brie.rs  backstage_pass.rs  conjured_mana_cake.rs  standard_item.rs  sulfuras.rs
